<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_default"
        android:text="@string/import_file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/file_path"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ellipsize="middle"
        android:padding="@dimen/spacing_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_import" />

    <Button
        android:id="@+id/button_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_browse"
        app:layout_constraintBaseline_toBaselineOf="@id/file_path"
        app:layout_constraintStart_toEndOf="@id/file_path" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:lines="1"
        android:padding="@dimen/spacing_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_path" />

    <EditText
        android:id="@+id/text_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:hint="@string/edit_text_hint"
        android:padding="@dimen/spacing_default"
        app:layout_constraintBottom_toTopOf="@id/button_save_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/button_save_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_default"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_default"
        android:text="@string/clear_all"
        app:layout_constraintBaseline_toBaselineOf="@id/button_save_text"
        app:layout_constraintStart_toEndOf="@id/button_save_text" />


</androidx.constraintlayout.widget.ConstraintLayout>