<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_default"
        android:text="@string/preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_default"
        android:src="@drawable/ic_edit"
        android:tint="?attr/colorControlNormal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/scrollview_text_preview"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollview_text_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/title_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_preview"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/text_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_default"
            tools:text="@tools:sample/lorem/random" />
    </ScrollView>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/scrollview_text_preview"
        app:layout_constraintEnd_toEndOf="@+id/scrollview_text_preview"
        app:layout_constraintStart_toStartOf="@+id/scrollview_text_preview"
        app:layout_constraintTop_toTopOf="@+id/scrollview_text_preview"
        tools:visibility="visible" />

    <Button
        android:id="@+id/retry_button"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/scrollview_text_preview"
        app:layout_constraintEnd_toEndOf="@+id/scrollview_text_preview"
        app:layout_constraintStart_toStartOf="@+id/scrollview_text_preview"
        app:layout_constraintTop_toTopOf="@+id/scrollview_text_preview"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/title_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_default"
        android:text="@string/title_text_color"
        app:layout_constraintBottom_toTopOf="@id/title_background_color"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_background_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_default"
        android:text="@string/title_background_color"
        app:layout_constraintBottom_toTopOf="@id/title_text_size"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_default"
        android:text="@string/title_text_size"
        app:layout_constraintBottom_toTopOf="@id/title_scrolling_speed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_scrolling_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_default"
        android:text="@string/title_scrolling_speed"
        app:layout_constraintBottom_toTopOf="@id/title_mirror_mode"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_mirror_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_default"
        android:text="@string/title_mirror_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="end"
        app:constraint_referenced_ids="title_text_color,title_background_color,title_text_size,title_scrolling_speed,title_mirror_mode"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekbar_text_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="@dimen/spacing_default"
        app:layout_constraintBottom_toBottomOf="@id/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@+id/title_text_size" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekbar_scrolling_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="@dimen/spacing_default"
        app:layout_constraintBottom_toBottomOf="@id/title_scrolling_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@+id/title_scrolling_speed" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_mirror_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_default"
        app:layout_constraintBottom_toBottomOf="@id/title_mirror_mode"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@+id/title_mirror_mode" />

    <FrameLayout
        android:id="@+id/color_picker_text_border"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:background="@color/black"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="@id/title_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@+id/title_text_color">

        <View
            android:id="@+id/color_picker_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            tools:backgroundTint="@color/primaryTextColor" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/color_picker_background_border"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:background="@color/black"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="@id/title_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@+id/title_background_color">

        <View
            android:id="@+id/color_picker_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            tools:backgroundTint="@color/colorPrimary" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
