<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview_play_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/play_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_default"
            android:paddingTop="@dimen/spacing_extra"
            android:paddingEnd="@dimen/spacing_default"
            android:paddingBottom="@dimen/spacing_extra"
            tools:text="@tools:sample/lorem/random" />
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:alpha="0.75"
        android:background="@android:color/black"
        android:clickable="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/play_control"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/spacing_default"
            android:src="@drawable/ic_pause"
            app:layout_constraintBottom_toTopOf="@id/title_text_size"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_default"
            android:text="@string/title_text_size"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/title_scrolling_speed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_scrolling_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_default"
            android:text="@string/title_scrolling_speed"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_mirror_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_default"
            android:text="@string/title_mirror_mode"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/color_picker_background"
            app:layout_constraintStart_toEndOf="@id/color_picker_background"
            app:layout_constraintTop_toTopOf="@id/color_picker_background" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:barrierDirection="end"
            app:constraint_referenced_ids="title_text_size,title_scrolling_speed"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="@dimen/spacing_default"
            app:layout_constraintBottom_toBottomOf="@id/title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/title_text_size" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_scrolling_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="@dimen/spacing_default"
            app:layout_constraintBottom_toBottomOf="@id/title_scrolling_speed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/title_scrolling_speed" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_mirror_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_default"
            app:layout_constraintBottom_toBottomOf="@id/title_mirror_mode"
            app:layout_constraintStart_toEndOf="@id/title_mirror_mode"
            app:layout_constraintTop_toTopOf="@+id/title_mirror_mode" />

        <View
            android:id="@+id/color_picker_text"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@color/colorAccent"
            android:padding="@dimen/spacing_default"
            app:layout_constraintBottom_toTopOf="@id/title_text_size"
            app:layout_constraintStart_toEndOf="@id/barrier"
            tools:background="@color/colorAccent" />

        <View
            android:id="@+id/color_picker_background"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:padding="@dimen/spacing_default"
            app:layout_constraintBottom_toTopOf="@id/title_text_size"
            app:layout_constraintStart_toEndOf="@id/color_picker_text"
            tools:background="@color/colorPrimary" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>